Fixed redirect, spacing

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
         margin: 5px;
         max-width: 380px;
         height: 230px;
+        overflow: hidden;
         /*
         border-width: 10px;
         border-style: solid;
@@ -60,8 +61,8 @@
         width: 100%;
         height: 100%;
     }
-    .row #bucket{
-        margin-bottom: 75px;
+    #bucket{
+        margin-bottom: 50px;
     }
     #header{
         left: 0px;
@@ -112,12 +113,6 @@
         margin: 0 auto;
         width: 380px;
     }
-    footer{
-        font-family: 'Avenir', Verdana, sans-serif;
-        text-align: center;
-        color: white;
-        font-size: 12px;
-    }
     #navigation-bar{
         line-height: 5px;
         text-align: center;
@@ -150,6 +145,12 @@
     svg{
         display: block;
         margin: auto;
+    }
+    footer{
+        font-family: 'Avenir', Verdana, sans-serif;
+        text-align: center;
+        color: white;
+        font-size: 12px;
     }
     .axis path {
         fill: none;
